--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ header h1 {
 #content button:hover {
     transition: 0.2s;
     opacity: 1;
+    outline: none;
 }
 
 /* RESPONSIVE==================================== */
